# monotonic_matrix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanup.sh  install.sh
src/: graph_gen.cpp  is2text.cpp  is2vc.cpp  text2svg.cpp
